# Thesis

./: .gitignore  AGENTS.md  README.md  benchmark.py  main.py  methodology_implementation.aux  methodology_implementation.fdb_latexmk  methodology_implementation.out  methodology_implementation.tex  pipeline_architecture.md  projects.code-workspace  pyproject.toml
Plain-DETR/: AGENTS.md  engine.py  main.py  (+2 more)
Plain-DETR-v2/: AGENTS.md  methodology_implementation.fls  pyproject.toml  wandb.env
Plain-DETR-v2/configs/: dinov3_vit_small_train.sh  swinv2_small_mim_pt_boxrpe.sh  swinv2_small_mim_pt_boxrpe_reparam.sh  swinv2_small_sup_pt_ape.sh  swinv2_small_sup_pt_boxrpe.sh
Plain-DETR-v2/plain_detr/: benchmark.py  main.py
Plain-DETR-v2/plain_detr/datasets/: coco_panoptic.py  data_prefetcher.py  panoptic_eval.py  samplers.py  transforms.py  zod_eval.py
Plain-DETR-v2/plain_detr/datasets/torchvision_datasets/: __init__.py  coco.py
Plain-DETR-v2/plain_detr/models/: backbone.py  detr.py  global_rpe_decomp_decoder.py  position_encoding.py  swin_transformer_v2.py  utils.py
Plain-DETR-v2/plain_detr/util/: plot_utils.py
Plain-DETR-v2/scripts/: download_pt_model.sh  run_dist_launch.sh  run_dist_slurm.sh  run_train.sh
Plain-DETR-v2/visualizations/ZOD/: visualize_zod_crops_tensors.py
Plain-DETR-v2/wandb/: latest-run
Plain-DETR-v2/wandb/run-20260411_205943-dinov3_vit_small_run1/files/: requirements.txt
Plain-DETR-v2/wandb/run-20260413_092434-dinov3_vit_small_run1/: run-dinov3_vit_small_run1.wandb
Plain-DETR-v2/wandb/run-20260413_100021-dinov3_vit_small_run1/: run-dinov3_vit_small_run1.wandb
Plain-DETR-v2/wandb/run-20260413_160154-dinov3_vit_small_run2/: run-dinov3_vit_small_run2.wandb
Plain-DETR-v2/wandb/run-20260416_005318-zod_dinov3_vit_small_run1/: run-zod_dinov3_vit_small_run1.wandb
Plain-DETR-v2/wandb/run-20260416_010648-zod_dinov3_vit_small_run1/: run-zod_dinov3_vit_small_run1.wandb
Plain-DETR-v2/wandb/run-20260416_012152-zod_dinov3_vit_small_run2/: run-zod_dinov3_vit_small_run2.wandb
Plain-DETR-v2/wandb/run-20260416_012152-zod_dinov3_vit_small_run2/files/: config.yaml
Plain-DETR-v2/wandb/run-20260416_133503-zod_dinov3_vit_small_run4/: run-zod_dinov3_vit_small_run4.wandb
Plain-DETR-v2/wandb/run-20260416_133503-zod_dinov3_vit_small_run4/files/: config.yaml
Plain-DETR-v2/wandb/run-20260416_140606-zod_dinov3_vit_small_run5/: run-zod_dinov3_vit_small_run5.wandb
Plain-DETR-v2/wandb/run-20260416_140606-zod_dinov3_vit_small_run5/files/: config.yaml
Plain-DETR-v2/wandb/run-20260416_201428-zod_dinov3_vit_small_run5/files/: config.yaml
Plain-DETR-v2/wandb/run-20260416_203855-zod_dinov3_vit_small_run5/files/: config.yaml
Plain-DETR-v2/wandb/run-20260417_135952-zod_dinov3_vit_small_run_fixed/: run-zod_dinov3_vit_small_run_fixed.wandb
Plain-DETR-v2/wandb/run-20260417_135952-zod_dinov3_vit_small_run_fixed/files/: config.yaml
(+148 files in other folders)
